feat(PASSWORD): add put method for updating password
